<resources>
    <string name="app_name">project_lagi</string>
    <string name="judul">Explore Pku</string>
    <string name="hotel">Hotel</string>
    <string name="com.noviam.project_uas.kuliner">Kuliner</string>
    <string name="nama">Nama</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="alamat">Alamat</string>
    <string name="wisata">Wisata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>