<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="5"
        android:text="Explore Pku"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/foto_detil1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:layout_weight="70"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />
    <TextView
        android:id="@+id/nama_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nama"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/alamat_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alamat"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="left"/>
    <TextView
        android:id="@+id/deskripsi_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deskripsi"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_gravity="left"/>

</LinearLayout>