<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="418dp"
        android:layout_height="256dp"
        android:contentDescription="@string/judul"
        android:scaleType="center"
        android:src="@drawable/pku"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/txtjudul"
        android:layout_width="282dp"
        android:layout_height="73dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/judul"
        android:textAlignment="center"
        android:textColor="#2A8C79"
        android:textColorHighlight="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="45dp" />

    <Button
        android:id="@+id/btnkuliner"
        android:layout_width="165dp"
        android:layout_height="99dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#2A8C79"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/com.noviam.project_uas.kuliner"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/restaurant"
        app:iconPadding="20dp"
        app:iconTint="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btntempat"
        android:layout_width="165dp"
        android:layout_height="99dp"
        android:backgroundTint="#2A8C79"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/wisata"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/calendar"
        app:iconTint="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/btnhotel"
        android:layout_width="165dp"
        android:layout_height="99dp"
        android:backgroundTint="#2A8C79"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/hotel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:icon="@drawable/hotel"
        app:iconPadding="12dp"
        app:iconTint="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>
